--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+<DOCUMENT filename="main.css">
 *,
 *::after,
 *::before {
@@ -12,13 +13,12 @@
 
 body {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
   min-height: 100vh;
   background-color: var(--dark-color);
   overflow: hidden;
   perspective: 1000px;
-  padding-top: 20px; /* Prevent black line overlap */
 }
 
 .night {
@@ -27,9 +27,9 @@ body {
   top: 0;
   transform: translateX(-50%);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   filter: blur(0.1vmin);
-  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color) 70%), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2));
+  background-image: radial-gradient(ellipse at top, transparent 0%, var(--dark-color)), radial-gradient(ellipse at bottom, var(--dark-color), rgba(145, 233, 255, 0.2));
 }
 
 .flowers {
@@ -151,9 +151,9 @@ body {
 .flower__leafs::after {
   content: "";
   position: absolute;
-  left: 50%;
-  top: -8vmin;
-  transform: translateX(-50%);
+  left: 0;
+  top: 0;
+  transform: translate(-50%, -100%);
   width: 8vmin;
   height: 8vmin;
   background-color: #6bf0ff;
@@ -207,26 +207,12 @@ body {
   background-color: #fff;
 }
 
-.flower__white-circle::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 45%;
-  transform: translate(-50%, -50%);
-  width: 60%;
-  height: 60%;
-  border-radius: inherit;
-  background-image: repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.03) 0px, rgba(0, 0, 0, 0.03) 1px, transparent 1px, transparent 12px), linear-gradient(90deg, rgb(127, 47, 21), rgb(255, 206, 0));
-}
-
 .flower__line {
   height: 55vmin;
   width: 1.5vmin;
   background-image: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent, rgba(255, 255, 255, 0.2)), linear-gradient(to top, transparent 10%, #583e08, #944415);
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
   animation: grow-flower-tree 4s backwards;
-  position: relative;
-  overflow: hidden; /* Contain leaves within line */
 }
 
 .flower__line__leaf {
@@ -251,37 +237,19 @@ body {
   transform: rotate(70deg) rotateY(30deg);
 }
 
-.flower__line__leaf--3 {
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: var(--h);
-  border-bottom-right-radius: var(--h);
-  left: -100%; /* Reduced from -460% to keep within bounds */
-  top: 12%;
-  transform: rotate(-70deg) rotateY(30deg);
-}
-
+.flower__line__leaf--3,
 .flower__line__leaf--4 {
   border-top-right-radius: 0;
   border-bottom-left-radius: 0;
   border-top-left-radius: var(--h);
   border-bottom-right-radius: var(--h);
-  left: -100%;
-  top: 40%;
+  left: -460%;
+  top: 12%;
   transform: rotate(-70deg) rotateY(30deg);
 }
 
-.flower__line__leaf--5 {
-  top: 0;
-  transform-origin: left;
-  transform: rotate(70deg) rotateY(30deg) scale(0.6);
-}
-
-.flower__line__leaf--6 {
-  top: -2%;
-  left: -90%;
-  transform-origin: right;
-  transform: rotate(-70deg) rotateY(30deg) scale(0.6);
+.flower__line__leaf--4 {
+  top: 40%;
 }
 
 .flower__light {
@@ -357,15 +325,6 @@ body {
   animation: moving-grass 2s linear infinite;
 }
 
-.flower__grass--2 {
-  left: 2vmin;
-  bottom: 10vmin;
-  transform: scale(0.5) rotate(75deg) rotateX(10deg) rotateY(-200deg);
-  opacity: 0.8;
-  z-index: 0;
-  animation: moving-grass--2 1.5s linear infinite;
-}
-
 .flower__grass--top {
   width: 7vmin;
   height: 10vmin;
@@ -398,14 +357,6 @@ body {
   left: 30%;
   --size: 6vmin;
   transform: rotate(-20deg);
-  animation: growing-grass-ans--1 2s 2.6s backwards;
-}
-
-@keyframes growing-grass-ans--1 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-20deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--2 {
@@ -413,14 +364,6 @@ body {
   left: -110%;
   --size: 6vmin;
   transform: rotate(10deg);
-  animation: growing-grass-ans--2 2s 2.4s linear backwards;
-}
-
-@keyframes growing-grass-ans--2 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--3 {
@@ -428,14 +371,6 @@ body {
   left: 60%;
   --size: 8vmin;
   transform: rotate(-18deg) rotateX(-20deg);
-  animation: growing-grass-ans--3 2s 2.2s linear backwards;
-}
-
-@keyframes growing-grass-ans--3 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-18deg) rotateX(-20deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--4 {
@@ -443,14 +378,6 @@ body {
   left: -135%;
   --size: 8vmin;
   transform: rotate(2deg);
-  animation: growing-grass-ans--4 2s 2s linear backwards;
-}
-
-@keyframes growing-grass-ans--4 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(2deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--5 {
@@ -458,14 +385,6 @@ body {
   left: 60%;
   --size: 10vmin;
   transform: rotate(-24deg) rotateX(-20deg);
-  animation: growing-grass-ans--5 2s 1.8s linear backwards;
-}
-
-@keyframes growing-grass-ans--5 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-24deg) rotateX(-20deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--6 {
@@ -473,14 +392,6 @@ body {
   left: -180%;
   --size: 10vmin;
   transform: rotate(10deg);
-  animation: growing-grass-ans--6 2s 1.6s linear backwards;
-}
-
-@keyframes growing-grass-ans--6 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--7 {
@@ -488,14 +399,6 @@ body {
   left: 70%;
   --size: 10vmin;
   transform: rotate(-10deg);
-  animation: growing-grass-ans--7 2s 1.4s linear backwards;
-}
-
-@keyframes growing-grass-ans--7 {
-  0% {
-    transform-origin: bottom left;
-    transform: rotate(-10deg) scale(0);
-  }
 }
 
 .flower__grass__leaf--8 {
@@ -503,14 +406,6 @@ body {
   left: -215%;
   --size: 11vmin;
   transform: rotate(10deg);
-  animation: growing-grass-ans--8 2s 1.2s linear backwards;
-}
-
-@keyframes growing-grass-ans--8 {
-  0% {
-    transform-origin: bottom right;
-    transform: rotate(10deg) scale(0);
-  }
 }
 
 .flower__grass__overlay {
@@ -524,430 +419,122 @@ body {
   z-index: 100;
 }
 
-.flower__g-long {
-  --w: 2vmin;
-  --h: 6vmin;
-  --c: #0e5b3c;
-  position: absolute;
-  bottom: 10vmin;
-  left: -3vmin;
-  transform-origin: bottom center;
-  transform: rotate(-30deg) rotateY(-20deg);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  animation: flower-g-long-ans 3s linear infinite;
+#typewriter-text {
+  position: fixed;
+  top: 5%;
+  width: 90%;
+  max-width: 600px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1.6;
+  padding: 20px;
+  color: #ffe4f3;
+  font-family: 'Courier New', monospace;
+  white-space: pre-wrap;
+  text-shadow: 0 0 10px #ff69b4, 0 0 20px #ff69b4;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  z-index: 999;
 }
 
-@keyframes flower-g-long-ans {
-  0%,
-  100% {
-    transform: rotate(-30deg) rotateY(-20deg);
-  }
-  50% {
-    transform: rotate(-32deg) rotateY(-20deg);
-  }
-}
-
-.flower__g-long__top {
-  top: calc(var(--h) * -1);
-  width: calc(var(--w) + 1vmin);
-  height: var(--h);
-  border-top-right-radius: 100%;
-  border-right: 0.7vmin solid var(--c);
-  transform: translate(-0.7vmin, 1vmin);
-}
-
-.flower__g-long__bottom {
-  width: var(--w);
-  height: 50vmin;
-  transform-origin: bottom center;
-  background-image: linear-gradient(to top, transparent 30%, var(--c));
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.5);
-  clip-path: polygon(35% 0, 65% 1%, 100% 100%, 0% 100%);
-}
-
-.flower__g-right {
-  position: absolute;
-  bottom: 6vmin;
-  left: -2vmin;
-  transform-origin: bottom left;
-  transform: rotate(20deg);
-}
-
-.flower__g-right .leaf {
-  width: 30vmin;
-  height: 50vmin;
-  border-top-left-radius: 100%;
-  border-left: 2vmin solid #217005;
-  background-image: linear-gradient(to bottom, transparent, var(--dark-color) 60%);
-  -webkit-mask-image: linear-gradient(to top, transparent 30%, #24803e 60%);
-}
-
-.flower__g-right--1 {
-  animation: flower-g-right-ans 2.5s linear infinite;
-}
-
-.flower__g-right--2 {
-  left: 5vmin;
-  transform: rotateY(-180deg);
-  animation: flower-g-right-ans--2 3s linear infinite;
-}
-
-.flower__g-right--2 .leaf {
-  height: 75vmin;
-  filter: blur(0.3vmin);
-  opacity: 0.8;
-}
-
-@keyframes flower-g-right-ans {
-  0%,
-  100% {
-    transform: rotate(20deg);
-  }
-  50% {
-    transform: rotate(24deg) rotateX(-20deg);
-  }
-}
-
-@keyframes flower-g-right-ans--2 {
-  0%,
-  100% {
-    transform: rotateY(-180deg) rotate(0deg) rotateX(-20deg);
-  }
-  50% {
-    transform: rotateY(-180deg) rotate(6deg) rotateX(-20deg);
-  }
-}
-
-.flower__g-front {
-  position: absolute;
-  bottom: 6vmin;
-  left: 2.5vmin;
-  z-index: 100;
-  transform-origin: bottom center;
-  transform: rotate(-28deg) rotateY(30deg) scale(1.04);
-  animation: flower__g-front-ans 2s linear infinite;
-}
-
-@keyframes flower__g-front-ans {
-  0%,
-  100% {
-    transform: rotate(-28deg) rotateY(30deg) scale(1.04);
-  }
-  50% {
-    transform: rotate(-35deg) rotateY(40deg) scale(1.04);
-  }
-}
-
-.flower__g-front__line {
-  width: 0.3vmin;
-  height: 20vmin;
-  background-image: linear-gradient(to top, transparent, #042e0b, transparent 100%);
-  position: relative;
-}
-
-.flower__g-front__leaf-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  transform-origin: bottom left;
-  transform: rotate(10deg);
-}
-
-.flower__g-front__leaf-wrapper:nth-child(even) {
-  left: 0vmin;
-  transform: rotateY(-180deg) rotate(5deg);
-  animation: flower__g-front__leaf-left-ans 1s ease-in backwards;
-}
-
-.flower__g-front__leaf-wrapper:nth-child(odd) {
-  animation: flower__g-front__leaf-ans 1s ease-in backwards;
-}
-
-.flower__g-front__leaf-wrapper--1 {
-  top: -8vmin;
-  transform: scale(0.7);
-  animation: flower__g-front__leaf-ans 1s 5.5s ease-in backwards;
-}
-
-.flower__g-front__leaf-wrapper--2 {
-  top: -8vmin;
-  transform: rotateY(-180deg) scale(0.7);
-  animation: flower__g-front__leaf-left-ans-2 1s 4.6s ease-in backwards;
-}
-
-.flower__g-front__leaf-wrapper--3 {
-  top: -3vmin;
-  animation: flower__g-front__leaf-ans 1s 4.6s ease-in backwards;
-}
-
-.flower__g-front__leaf-wrapper--4 {
-  top: -3vmin;
-  transform: rotateY(-180deg) scale(0.9);
-  animation: flower__g-front__leaf-left-ans-2 1s 4.6s ease-in backwards;
-}
-
-@keyframes flower__g-front__leaf-left-ans-2 {
-  0% {
-    transform: rotateY(-180deg) scale(0);
-  }
-}
-
-.flower__g-front__leaf-wrapper--5,
-.flower__g-front__leaf-wrapper--6 {
-  top: 2vmin;
-}
-
-.flower__g-front__leaf-wrapper--7,
-.flower__g-front__leaf-wrapper--8 {
-  top: 6.5vmin;
-}
-
-.flower__g-front__leaf-wrapper--2 {
-  animation-delay: 5.2s;
-}
-
-.flower__g-front__leaf-wrapper--3 {
-  animation-delay: 4.9s;
-}
-
-.flower__g-front__leaf-wrapper--5 {
-  animation-delay: 4.3s;
-}
-
-.flower__g-front__leaf-wrapper--6 {
-  animation-delay: 4.1s;
-}
-
-.flower__g-front__leaf-wrapper--7 {
-  animation-delay: 3.8s;
-}
-
-.flower__g-front__leaf-wrapper--8 {
-  animation-delay: 3.5s;
-}
-
-@keyframes flower__g-front__leaf-ans {
-  0% {
-    transform: rotate(10deg) scale(0);
-  }
-}
-
-@keyframes flower__g-front__leaf-left-ans {
-  0% {
-    transform: rotateY(-180deg) rotate(5deg) scale(0);
-  }
-}
-
-.flower__g-front__leaf {
-  width: 10vmin;
-  height: 10vmin;
-  border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
-  box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color)), linear-gradient(to bottom right, #064f0a 50%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(to bottom right, #097149 50%, transparent 50%, transparent);
-  mask-image: linear-gradient(to bottom right, #0e8723 50%, transparent 50%, transparent);
-}
-
-.flower__g-fr {
-  position: absolute;
-  bottom: -4vmin;
-  left: 0vmin;
-  transform-origin: bottom left;
-  z-index: 10;
-  animation: flower__g-fr-ans 2s linear infinite;
-}
-
-@keyframes flower__g-fr-ans {
-  0%,
-  100% {
-    transform: rotate(2deg);
-  }
-  50% {
-    transform: rotate(4deg);
-  }
-}
-
-.flower__g-fr .leaf {
-  width: 30vmin;
-  height: 50vmin;
-  border-top-left-radius: 100%;
-  border-left: 2vmin solid #147b47;
-  -webkit-mask-image: linear-gradient(to top, transparent 25%, #0e4e2a 50%);
-  position: relative;
-  z-index: 1;
-}
-
-.flower__g-fr__leaf {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10vmin;
-  height: 10vmin;
-  border-radius: 100% 0% 0% 100%/100% 100% 0% 0%;
-  box-shadow: inset 0 2px 1vmin hsla(184deg, 97%, 58%, 0.2);
-  background-image: linear-gradient(to bottom left, transparent, var(--dark-color) 98%), linear-gradient(to bottom right, #106e18 45%, transparent 50%, transparent);
-  -webkit-mask-image: linear-gradient(135deg, #175f22 40%, transparent 50%, transparent);
-}
-
-.flower__g-fr__leaf--1 {
-  left: 20vmin;
+.heart {
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  background-color: #ff69b4;
   transform: rotate(45deg);
-  animation: flower__g-fr-leaft-ans-1 0.5s 5.2s linear backwards;
+  animation: floatUp 6s linear infinite;
+  box-shadow: 0 0 10px #ff69b4, 0 0 20px #ff69b4;
+  opacity: 0.9;
+  z-index: 0;
 }
 
-@keyframes flower__g-fr-leaft-ans-1 {
-  0% {
-    transform-origin: left;
-    transform: rotate(45deg) scale(0);
-  }
-}
-
-.flower__g-fr__leaf--2 {
-  left: 12vmin;
-  top: -7vmin;
-  transform: rotate(25deg) rotateY(-180deg);
-  animation: flower__g-fr-leaft-ans-6 0.5s 5s linear backwards;
-}
-
-.flower__g-fr__leaf--3 {
-  left: 15vmin;
-  top: 6vmin;
-  transform: rotate(55deg);
-  animation: flower__g-fr-leaft-ans-5 0.5s 4.8s linear backwards;
-}
-
-.flower__g-fr__leaf--4 {
-  left: 6vmin;
-  top: -2vmin;
-  transform: rotate(25deg) rotateY(-180deg);
-  animation: flower__g-fr-leaft-ans-6 0.5s 4.6s linear backwards;
-}
-
-.flower__g-fr__leaf--5 {
-  left: 10vmin;
-  top: 14vmin;
-  transform: rotate(55deg);
-  animation: flower__g-fr-leaft-ans-5 0.5s 4.4s linear backwards;
-}
-
-@keyframes flower__g-fr-leaft-ans-5 {
-  0% {
-    transform-origin: left;
-    transform: rotate(55deg) scale(0);
-  }
-}
-
-.flower__g-fr__leaf--6 {
-  left: 0vmin;
-  top: 6vmin;
-  transform: rotate(25deg) rotateY(-180deg);
-  animation: flower__g-fr-leaft-ans-6 0.5s 4.2s linear backwards;
-}
-
-@keyframes flower__g-fr-leaft-ans-6 {
-  0% {
-    transform-origin: right;
-    transform: rotate(25deg) rotateY(-180deg) scale(0);
-  }
-}
-
-.flower__g-fr__leaf--7 {
-  left: 5vmin;
-  top: 22vmin;
-  transform: rotate(45deg);
-  animation: flower__g-fr-leaft-ans-7 0.5s 4s linear backwards;
-}
-
-@keyframes flower__g-fr-leaft-ans-7 {
-  0% {
-    transform-origin: left;
-    transform: rotate(45deg) scale(0);
-  }
-}
-
-.flower__g-fr__leaf--8 {
-  left: -4vmin;
-  top: 15vmin;
-  transform: rotate(15deg) rotateY(-180deg);
-  animation: flower__g-fr-leaft-ans-8 0.5s 3.8s linear backwards;
-}
-
-@keyframes flower__g-fr-leaft-ans-8 {
-  0% {
-    transform-origin: right;
-    transform: rotate(15deg) rotateY(-180deg) scale(0);
-  }
-}
-
-.long-g {
+.heart::before,
+.heart::after {
+  content: "";
   position: absolute;
-  bottom: 25vmin;
-  left: -42vmin;
-  transform-origin: bottom left;
+  width: 20px;
+  height: 20px;
+  background-color: #ff69b4;
+  border-radius: 50%;
 }
 
-.long-g--1 {
-  bottom: 0vmin;
-  transform: scale(0.8) rotate(-5deg);
+.heart::before {
+  top: -10px;
+  left: 0;
 }
 
-.long-g--1 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #196d2a 80%) !important;
+.heart::after {
+  left: -10px;
+  top: 0;
 }
 
-.long-g--1 .leaf--1 {
-  --w: 5vmin;
-  --h: 60vmin;
-  left: -2vmin;
-  transform: rotate(3deg) rotateY(-180deg);
+@keyframes floatUp {
+  0% {
+    transform: translateY(100vh) rotate(45deg);
+    opacity: 0.9;
+  }
+  100% {
+    transform: translateY(-100vh) rotate(720deg);
+    opacity: 0;
+  }
 }
 
-.long-g--2,
-.long-g--3 {
-  bottom: -3vmin;
-  left: -35vmin;
-  transform-origin: center;
-  transform: scale(0.6) rotateX(60deg);
+@media (max-width: 600px) {
+  #typewriter-text {
+    font-size: 0.8rem;
+    padding: 15px;
+    width: 95%;
+  }
 }
 
-.long-g--2 .leaf,
-.long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #176220 80%) !important;
+@keyframes moving-flower-1 {
+  0%,
+  100% { transform: rotate(2deg); }
+  50% { transform: rotate(-2deg); }
 }
 
-.long-g--2 .leaf--1,
-.long-g--3 .leaf--1 {
-  left: -1vmin;
-  transform: rotateY(-180deg);
+@keyframes moving-flower-2 {
+  0%,
+  100% { transform: rotate(18deg); }
+  50% { transform: rotate(14deg); }
 }
 
-.long-g--3 {
-  left: -17vmin;
-  bottom: 0vmin;
+@keyframes moving-flower-3 {
+  0%,
+  100% { transform: rotate(-18deg); }
+  50% { transform: rotate(-20deg) rotateY(-10deg); }
 }
 
-.long-g--3 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 40%, #176220 80%) !important;
+@keyframes blooming-leaf-right {
+  0% { transform-origin: left; transform: rotate(70deg) rotateY(30deg) scale(0); }
 }
 
-.long-g--4 {
-  left: 25vmin;
-  bottom: -3vmin;
-  transform-origin: center;
-  transform: scale(0.6) rotateX(60deg);
+@keyframes blooming-leaf-left {
+  0% { transform-origin: right; transform: rotate(-70deg) rotateY(30deg) scale(0); }
 }
 
-.long-g--4 .leaf {
-  -webkit-mask-image: linear-gradient(to top, transparent 50%, #176220 80%) !important;
+@keyframes grow-flower-tree {
+  0% { height: 0; border-radius: 1vmin; }
 }
 
-.long-g--5 {
-  left: 42vmin;
-  bottom: 0vmin;
-  transform: scale(0.8) rotate(2deg);
+@keyframes blooming-flower {
+  0% { transform: scale(0); }
 }
 
-.long-g--6 {
-  left: 0
+@keyframes moving-grass {
+  0%,
+  100% { transform: rotate(-48deg) rotateY(40deg); }
+  50% { transform: rotate(-50deg) rotateY(40deg); }
+}
+
+@keyframes light-ans {
+  0% { opacity: 0; transform: translateY(0vmin); }
+  25% { opacity: 1; transform: translateY(-5vmin) translateX(-2vmin); }
+  50% { opacity: 1; transform: translateY(-15vmin) translateX(2vmin); filter: blur(0.2vmin); }
+  75% { transform: translateY(-20vmin) translateX(-2vmin); filter: blur(0.2vmin); }
+  100% { transform: translateY(-30vmin); opacity: 0; filter: blur(1vmin); }
+}
+</DOCUMENT>
